# visualizing-training

./: .buildinfo  MANIFEST.in  README.md  collection_patch.py  demo_run.ipynb  genindex.html  index.html  objects.inv  pizza_clock_analysis.ipynb  prediction.ipynb  py-modindex.html  pyproject.toml  quickstart.ipynb  requirements.txt  search.html  searchindex.js  setup.py  sphinx_patch.py  transformer_pizza_rand.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: api.doctree  hmm.doctree  models.doctree  train.doctree  utils.doctree  visualize.doctree
.doctrees/source/: conf.doctree  contributing.doctree  core_approach.doctree  getting_started.doctree  hmm.doctree  metrics.doctree  modules.doctree  resources.doctree  step_by_step.doctree  train.doctree  visualize.doctree
.github/workflows/: documentation.yml
_sources/api/: api.md.txt  hmm.md.txt  train.md.txt  utils.md.txt
_sources/source/: contributing.md.txt  hmm.md.txt  (+4 more)
api/: api.html  hmm.html  models.html  train.html  utils.html  visualize.html
docs/: DOCS.md  api.md  conf.py  hmm.md  index.rst  train.md  visualize.md
pizza/: data.py  model.py
source/: conf.html  contributing.html  core_approach.html  getting_started.html  hmm.html  metrics.html  modules.html  resources.html  step_by_step.html  train.html  visualize.html
src/: constants.py  hmm.py  train.py  utils.py  visualize.py
visualize_training/: compute_cka_mnist.py  data.py  hmm.py  metrics.py  model.py  train.py  utils.py  visualize.py
visualizing_training/: constants.py  hmm.py  model.py  train.py  utils.py  visualize.py
(+19 files in other folders)
