# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualizing-training"
version = "1.0.0"
description = "Modelling Training Dynamics and Interpreting the dynamics"

dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.2.1",
    "evaluate>=0.4.1",
    "torch>=2.2.2",
    "accelerate>=0.28.0",
    "wandb>=0.16.5",
    "einops>=0.7.0",
    "torchvision>=0.17.2",
    "hmmlearn>=0.3.2",
    "graphviz>=0.20.3",
    "plotly>=5.20.0",
    "gravis>=0.1.0"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/michahu/visualizing-training"